<resources>
    <string name="app_name">DroidERestaurant</string>
    <string name="staters">Starters</string>
    <string name="main">Meals</string>
    <string name="end">Desserts</string>
    <string name="total">Total</string>
    <string name="welcome">Welcome in DroidERestaurant </string>
    <string name="category">Plat list</string>
    <string name="addNotif">Votre plat a été ajouté au panier</string>
    <string name="basket">Panier</string>
    <string name="quantity">Quantité : </string>
    <string name="order">Passer commande</string>
    <string name="registerTitle">Création de votre compte</string>
    <string name="loginTitle">Se connecter</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="register">Créer votre compte</string>
    <string name="noAccount">Je n\'ai pas de compte</string>
    <string name="firstname">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="invalidForms">Veuillez saisir tous les champs</string>
</resources>